--- a/estilos.css
+++ b/estilos.css
@@ -12,6 +12,18 @@ REGLAS DE CODIFICACIÓN CSS
 
 
 */
+/*PRERENDER*/
+@font-face {
+	font-family: 'icomoon';/*PUEDE SER CUALQUIER NOMBRE*/
+	src:url('fonts/icomoon.eot');/*IE*/
+	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('fonts/icomoon.woff') format('woff'),
+		url('fonts/icomoon.ttf') format('truetype'),
+		url('fonts/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 
 a{
 	color: #DD4F24;
@@ -116,7 +128,15 @@ header #avatar figcaption{
 	/*COMO EL ELEMENTO ES CLICKEABLE SE PONDRÁ PADDING
 	PORQ ES MARGEN INTERNO, HACE AL OBJ MÁS GRANDE Y TODA SU ÁREA SERÁ CLICKEABLE
 	*/
+	line-height: 50px;/*LINE-HEIGHT ES EL TAMAÑO DE LAS LINEAS DEL TEXTO*/
 	padding: 0 2px;
+}
+/*PARA EL ICONO DÓNDE ESTABA EL **/
+header #avatar figcaption:after{
+	content: "\e601";
+	font-family: "icomoon";
+	font-size: 0.7em;
+	opacity: 0.5;
 }
 
 header #avatar img{
@@ -156,19 +176,39 @@ nav ul li a{
 	padding: 0.5em 0;
 }
 
-nav #flechita_nav a{
-	background: #22BCE0;
-	padding: 0.5em;
-	text-decoration: none;
+nav #flechita_nav a:after{
+	content: "\e600";
+	font-family: "icomoon";
+	opacity: 0.5;
 }
 
+nav #flechita_nav a{
+	background: #22BCE0;
+	padding: 0.5em 0;
+	text-decoration: none;
+}
+/*LI PUBLICAR*/
 nav #publicar_nav{
+	background: #DD4F24;
 	float: right;/*QUE FLOTE A DERECHA  EL LINK PUBLICAR*/
 	margin-right: 0;/*QUE QUEDE PEGADO EL LINK PUBLICAR*/
+	padding-right: 0.8em;/*1.5em;*/
+	position: relative;/*PARA EL CONTENEDOR QUE ES EL LI*/
+}
+/*PARA EL ICONO DEL LI PUBLICAR*/
+nav #publicar_nav:after{
+	color: rgba(255,255,255,0.5);
+	content: "\e603";
+	font-family: "icomoon";
+	font-size: 1.8em;
+	position: absolute;/*PARA LO DE ADENTRO*/
+	right: 0;/*ICONO A LA ORILLA, EZQ SUP DERECHA*/
+	top: 0;
 }
 
 nav #publicar_nav a{
-	background: #DD4F24;
+	/*background: #DD4F24;*//*SE LE CAMBIA EL FONDO PARA EL ICONO*/
+	display: inline-block;/*PARA EL ICONO DE PLUMA*/
 	padding: 0.5em 1em;
 	text-decoration: none;
 }
@@ -191,6 +231,16 @@ nav #publicar_nav a{
 #contenido .item p{
 	color: #7a7a7a;
 	font-size: 0.9em;
+}
+
+#contenido .item .datos_item .guardar_item{
+	text-decoration: none;
+}
+/*PARA EL ICONO DE LA ESTRELLA*/
+#contenido .item .datos_item .guardar_item:after{
+	color: #FD5;
+	content: "\e604";
+	font-family: "icomoon";
 }
 
 #contenido .item .datos_item .tag_item{
@@ -234,5 +284,23 @@ NO ESTÁN ALINEADOS AL MISMO NIVEL NO USAR DISPLAY INLINE-BLOCK MEJOR FLOAT*/
 	width: 96px;
 }
 
+#contenido .item .votacion a{
+	text-decoration: none;
+}
 
+#contenido .item .votacion .up:after,
+#contenido .item .votacion .down:after{
+	font-family: "icomoon";
+	font-size: 1.5em;
+	vertical-align: bottom;
+}
 
+#contenido .item .votacion .up:after{
+	color: red;
+	content: "\e602";
+}
+
+#contenido .item .votacion .down:after{
+	color: green;
+	content: "\e601";
+}
